# prefixctl-meta

./: .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.yaml  README.md  pyproject.toml  tox.ini
Ctl/: tmplvars.yaml
docs/: install.md
src/prefix_meta/: views.py
src/prefix_meta/migrations/: 0017_arinapirequestattachment_arinapirequestticketdetails_and_more.py
src/prefix_meta/rest/: views.py
src/prefix_meta/sources/irr_explorer/: base.py
src/prefix_meta/static/prefix-meta/: prefix-meta.js
